fix for overflow

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -15,15 +15,21 @@ body {
   color: #444;
 }
 
+#list {
+  padding-left: 0px;
+}
+
 .res {
   font-family: 'Quicksand';
   color: #e6dae1;
-  margin: 30px;
+  margin: 30px 0px 30px 0px;
   padding: 5px;
-  font-size: 25px;
+  font-size: 20px;
   list-style-type: none;
+  list-style-position: left;
   text-align: left;
   background-color: #ff4719;
   border-radius: 10px;
   text-shadow: 0px -1px 0px #c42700;
+  overflow: auto;
 }
